# sii-polygon

./: .gitignore  README.md  get_predios.ipynb  install.sh  pyproject.toml  ruff.toml
notebooks/: get_maps.ipynb
sii_polygons/: __init__.py  comunas.py  params.py  plotting.py  requests.py  utils.py
tutoriales/: Tutorial 01: Obtener mapas del SII.ipynb
